test/end-to-end/runnable/choose-overload-by-lambda-destructure.crow
import
	crow/io/print: out, print

main void() summon
	a = (() => 3) foo
	b = ((x nat) => x * 2) foo
	out print "a: {a}, b: {b}"

foo nat(cb nat mut(x nat))
	cb[1]

foo nat(cb nat mut())
	cb[]
