test/end-to-end/compile-errors/lambda-errors.crow
main void()
	d = () => 1
	3 foo (x string) => ()
	3 bar x => ()

foo void(x nat, f void mut(x nat))
	()
bar void(x nat, f void mut(x nat))
	()
bar void(x nat, f nat)
	()
bar void(x nat, f void mut(x string))
	()
